--- a/epilepsy.ipynb
+++ b/epilepsy.ipynb
@@ -6,7 +6,7 @@
       "name": "epilepsy",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgm9KTEYwNc1Zi59jkwWuo",
+      "authorship_tag": "ABX9TyPF5eLMBe6qHPVYRM//5n34",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -460,7 +460,7 @@
         "id": "0822ocDmoANq",
         "outputId": "bc619e78-bf11-4a85-fea1-51764b82ecc5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
         "id": "uh8P77IkoDtu",
         "outputId": "e38a80bc-b978-48a0-f035-dc0fc0c9d5d6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
         "id": "5iYbvY91oLzx",
         "outputId": "83e83dfc-c115-4afe-a555-2c486a56d32c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +919,7 @@
       "metadata": {
         "id": "JZdJV2lUoP2W"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +931,7 @@
       "metadata": {
         "id": "C0pbvYgqoZUv"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -944,7 +944,7 @@
       "metadata": {
         "id": "fGgkcrh_oa9G"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -981,7 +981,7 @@
         "id": "U5Yx5A4LomSb",
         "outputId": "ae9145b1-ff4a-455f-ebdc-f051f6aed1f7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1019,7 +1019,7 @@
         "id": "ejt3Uc36pf5l",
         "outputId": "543e0f60-dd8e-4fa3-ed32-3ea517b59a07"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1045,7 +1045,7 @@
         "id": "BUOkf-UfptoN",
         "outputId": "9666eed0-0368-4902-9d6a-5e76a0b84ed5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,7 +1080,7 @@
       "metadata": {
         "id": "9yLiQbjVpwCi"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1101,7 +1101,7 @@
       "metadata": {
         "id": "v9aWQ3W1p5Tw"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1118,7 +1118,7 @@
       "metadata": {
         "id": "Fy0HJmYaqCPb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1141,7 @@
         "id": "S2Is3na3qfgk",
         "outputId": "5e41afd0-ec50-43c9-e1eb-7d2f1b23173d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1181,7 +1181,7 @@
         "id": "E0pY8mG3qiG6",
         "outputId": "e0b13e96-85bb-4e51-fe4a-c825da46689c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1222,7 @@
         "id": "hGSibfForFoQ",
         "outputId": "7ebb7ec4-fb9e-4f94-fc26-f5d00434d996"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,7 +1268,7 @@
         "id": "Vo95kqBKrfx1",
         "outputId": "c2f1d8d0-5880-44d3-f27b-5c37104b0850"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,7 +1309,7 @@
         "id": "SLCxizB2rvB3",
         "outputId": "e0a854fc-e978-487c-bdab-dffe1bd17f26"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1337,7 +1337,7 @@
         "id": "wPlZskUxsLDR",
         "outputId": "ad255ecd-a79a-426b-cee1-326e6d4d11eb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1373,7 @@
         "id": "--h0_eoXsNoI",
         "outputId": "750c90f0-ecf5-41ec-9359-ba17a61f78b7"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,7 +1400,7 @@
         "id": "_fdhdVjRsxn0",
         "outputId": "8051ea12-2e4a-4b22-ae2a-b1103beae574"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1428,7 +1428,7 @@
         "id": "E_SPiAVYs4VX",
         "outputId": "fab018f1-ab6c-4c39-f513-eebd0dc6e1a5"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1463,7 +1463,7 @@
         "id": "nyeqqBbmtA2-",
         "outputId": "2ab45c88-37d0-41d1-ffb4-46e3126da739"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1498,7 +1498,7 @@
         "id": "fzxJY3mttd8J",
         "outputId": "e92680b2-dd48-40ce-c164-8db21adb2a8e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1537,7 +1537,7 @@
         "id": "jtbouXK_tn6M",
         "outputId": "2132a063-f021-4320-bfe3-750f4eabf220"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,7 +1564,7 @@
         "id": "tvIx6NqjwJYY",
         "outputId": "db38cac6-2df9-413a-d62b-d9a15a5a2a57"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1593,7 +1593,7 @@
         "id": "mMuvt0KyuqJ2",
         "outputId": "09b60fc2-b1a1-4ec0-a356-a07253161373"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1620,7 +1620,7 @@
         "id": "lBdt_iXGusAu",
         "outputId": "60f93384-dc29-435a-bbc1-6063de5b3b11"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1634,6 +1634,40 @@
           "execution_count": 44
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#genetic algorithm\n",
+        "import random \n",
+        "initialpop = 100\n",
+        "population = [np.random.randint(1, 15, (3,)) for i in range(initialpop)]\n",
+        "scores = []\n",
+        "\n",
+        "for gen in range(initialpop // 2):\n",
+        "    del scores[:]\n",
+        "    for sample in population:\n",
+        "        n.fit(trainx, trainy)\n",
+        "        scores.append([n.score(testx, testy), sample])\n",
+        "    scores.sort(key=lambda a: a[0])\n",
+        "    if len(scores) == 2:\n",
+        "        break\n",
+        "    del scores[:2]\n",
+        "    population = [model[1] for model in scores]\n",
+        "    newpop = []\n",
+        "    for index in range(len(population))[0:-1:2]:\n",
+        "        newpop.append(np.concatenate((population[index][:1], population[index+1][1:])))\n",
+        "        newpop.append(np.concatenate((population[index+1][:1], population[index][:1])))\n",
+        "    population=list(newpop)\n",
+        "    print(\"Generation \", gen+1, \" done.\")\n",
+        "\n",
+        "print(scores)"
+      ],
+      "metadata": {
+        "id": "CkjsxtgA0WxN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
